todo/todo-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
      - name: postgres 
        image: ngoprek/kudemo-todo-postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 5432
