todo/todo-api-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata: 
  name: api-load-balancer-service
spec:
  type: LoadBalancer
  ports: 
    - port: 8080
      targetPort: 8080
  selector:
    component: api
