todo/todo-postgres-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-servce
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
