todo/todo-ui-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kudemo-todo-ui-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: kudemo-todo-ui
  ports:
  - port: 80
    targetPort: 80
